# others

./: README.md  cmake_读书笔记.txt
common/: 4file.c  4file.h  CMakeLists.txt  CMakeLists.txt~  readme.txt
common/LOG/: CMakeLists.txt~  LOG.CPP  LOG.H
common/include/: CEP.h  CGlobalConfig.h  LOG.H  LOG.h  common.h
common/src/: 4file.c  CMakeLists.txt  common.h
common/src/CEP/: CEP.cpp  CEP.h  CMakeLists.txt
common/src/LOG/: CMakeLists.txt  LOG.CPP  LOG.H  LOG.cpp  LOG.h
common/src/common/: 4conf.c  4file.c  CMakeLists.txt
test/: a.out  main.cpp  test.cpp
test4Boost/: CMakeLists.txt  callback_task.hpp  main.cpp
test4ListenBacklog/: CMakeLists.txt  CMakeLists.txt~  client.c  client.c~  see-e-n  see-e-v  see-r-n  see-r-v  server.c  server.c~
test4Log/: CMakeLists.txt  CMakeLists.txt~  LOG.CPP~  LOG.H  LOG.H~  conf  main.cpp  main.cpp~  main2.cpp~  main3.cpp~  test  test.sh
test4Log/log/: log.debug  log.error  log.fatal  log.warn
test4MHD/: CMakeLists.txt  main.c
test4MHD_make/: Makefile  Makefile~
test4Makefile/test4MHD_make/: main.c
test4Makefile/test4UDP_make/: ._server_main.c  Makefile
test4ProtoBuf/: Makefile  buildAndRun.sh  helloworld.Iam.pb.cc  helloworld.Iam.pb.h  helloworld.Iam.proto  msg.txt  reader  reader.cpp  writer  writer.cpp
test4ProtoBuf/helloworld.message/: helloworld.Iam.pb.cc  helloworld.Iam.pb.h  helloworld.Iam.proto
test4Shell/: .test.sh.swp  array.sh  awk.sh  compare.sh  funcAndVal.sh  funcAndVal2.sh  funcs.inc  loop.sh  test.sh
test4TCPAPN/: .server.c.swp  CEP.cpp  CEP.h  CMakeLists.txt  client  server  server.c
test4TCPCS/: CMakeLists.txt  client.c  server.c  server2.c  server3.c
test4TCPEpoll/: CEP.cpp  CEP.h  CMakeLists.txt  build.sh  client  client.c  server  server.c
test4UDP/: CMakeLists.txt
test4UDP_cmake/src/: CMakeLists.txt  server_main.c
test4UDP_make/: Makefile~  client_main.c  client_main.c~  server_main.c~
test4shell/: compare.sh  mainParam.sh
unp_lib/: unp.h
