cmake_minimum_required(VERSION 2.8)
PROJECT(tcpepoll)
SET(CMAKE_C_COMPILER "g++")
SET(CMAKE_C_FLAGS "-g")

SET(SRC_CLIENT client.c CEP.cpp)
SET(SRC_SERVER server.c CEP.cpp)
SET(LIB_LIST   pthread LOG)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/include)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lib)

ADD_EXECUTABLE(client ${SRC_CLIENT})
ADD_EXECUTABLE(server ${SRC_SERVER})
TARGET_LINK_LIBRARIES(client ${LIB_LIST})
TARGET_LINK_LIBRARIES(server ${LIB_LIST})






