SET(LIB_NAME CEP)

SET(SRC_LIST CEP.cpp)

ADD_LIBRARY(${LIB_NAME} SHARED ${SRC_LIST})
ADD_LIBRARY(${LIB_NAME}_STAIC ${SRC_LIST})
SET_TARGET_PROPERTIES(${LIB_NAME}_STAIC PROPERTIES OUTPUT_NAME ${LIB_NAME})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../lib)


EXEC_PROGRAM(cp 
ARGS
${CMAKE_CURRENT_SOURCE_DIR}/CEP.h
${CMAKE_CURRENT_SOURCE_DIR}/../../include)
