SET(LIB_NAME LOG)

SET(SRC_LIST LOG.cpp)

ADD_LIBRARY(${LIB_NAME} SHARED ${SRC_LIST})
ADD_LIBRARY(${LIB_NAME}_STAIC ${SRC_LIST})
SET_TARGET_PROPERTIES(${LIB_NAME}_STAIC PROPERTIES OUTPUT_NAME ${LIB_NAME})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../lib)

TARGET_LINK_LIBRARIES(${LIB_NAME} pthread liblog4cplus.a rt)
TARGET_LINK_LIBRARIES(${LIB_NAME}_STAIC pthread liblog4cplus.a rt)


EXEC_PROGRAM(cp 
ARGS
${CMAKE_CURRENT_SOURCE_DIR}/LOG.h
${CMAKE_CURRENT_SOURCE_DIR}/../../include)

