SET(LIB_NAME common)

SET(SRC_LIST 4file.c 4conf.c)

ADD_LIBRARY(${LIB_NAME} SHARED ${SRC_LIST})
ADD_LIBRARY(${LIB_NAME}_STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(${LIB_NAME}_STATIC PROPERTIES OUTPUT_NAME ${LIB_NAME})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../lib)

EXEC_PROGRAM(cp 
ARGS
${CMAKE_CURRENT_SOURCE_DIR}/common.h
${CMAKE_CURRENT_SOURCE_DIR}/../../include)


